--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,6 +5,8 @@
     <title>Chat FullStack JavaScript</title>
     <!--BOOTSTRAP-->
     <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css">
+    <!--Fuente iconos-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!--CSS PROPIOS-->
     <link rel="stylesheet" href="/css/main.css">
 </head>
@@ -12,25 +14,57 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a href="/" class="navbar-brand mx-auto">Chat FullStack JavaScript</a>
     </nav>
-    <div class="container">
-        <div class="col-md6 mt-4">
-            <div class="card">
-                <div class="card-header">
-                    <h4>Chatiamos?</h4>
-                </div >
-                <div id="idChat" class="cardbody">
-                </div>
-                <form class="card-footer" id="message-form">
-                    <div class="input-group">
-                        <input type="text" name="" id="message" class="form-control">
-                        <div class="input-group-append"> 
-                            <input type="submit" value="Enviar" class="btn btn-dark bg-primary">
-                        </div>
-                    </div>
-                </form>
-            </div>
+
+    <!--CONTENEDOR DEL LOGIN-->
+    <div class="card col-md-4 mt-5 mx-auto border-primary" id="userContainer">
+        <div class="card-header ">
+            <h3>Ingresa tu Usuario: </h3>
+        </div>
+        <p id="userError"></p>
+        <div class="card-body">
+            <form id="userForm">
+                <input type="text" name="nameUser" id="nameUser" class="form-control">
+                <button type="submit" class="btn btn-dark bg-primary btn-block mt-2">
+                    <i class="fas fa-user-tie"> Ingresar </i>
+                </button>
+            </form>
         </div>
     </div>
+    <!--CONTENERDOR DEL CHAT-->
+    <div class="container"  id="containerApp"> 
+        <div class="row mt-2">
+            <div class="col-md-6 offset-md-1 ">
+                <div class="card">
+                    <div class="card-header">
+                        <h4>Chatiamos?</h4>
+                    </div >
+                    <div id="idChat" class="cardbody">
+                    </div>
+                    <form class="card-footer" id="message-form">
+                        <div class="input-group">
+                            <input type="text" name="" id="message" class="form-control">
+                            <div class="input-group-append"> 
+                                <button type="submit" class="btn btn-dark bg-primary">
+                                    <i class="fas fa-paper-plane">Enviar</i>
+                                </button>                                        
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!--LISTAR USUARIOS-->
+            <div class="card col-md-3">
+                <div class="card-header">
+                    <h3>Usuarios: </h3>
+                </div>
+                <div class="card-body">
+                    <div id="userName"></div>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/main.js"></script>
