--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="/chat.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/chat.ico" type="image/x-icon" />
     <title>Chat FullStack JavaScript</title>
     <!--BOOTSTRAP-->
     <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css">
@@ -36,7 +38,7 @@
             <div class="col-md-6 offset-md-1 ">
                 <div class="card">
                     <div class="card-header">
-                        <h4>Chatiamos?</h4>
+                        <h4>Chateamos <i class="fas fa-comment-dots"></i></h4>
                     </div >
                     <div id="idChat" class="cardbody">
                     </div>
@@ -55,7 +57,7 @@
             <!--LISTAR USUARIOS-->
             <div class="card col-md-3">
                 <div class="card-header">
-                    <h3>Usuarios: </h3>
+                    <h3>Usuarios <i class="fas fa-users"></i> </h3>
                 </div>
                 <div class="card-body">
                     <div id="userNames"></div>
